--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:github": "vite build --base /my-blog/",
     "preview": "vite preview"
   },
   "optionalDependencies": {
